Corrected several bugs with exporting annotation to Redis DB: finding the right DB ID, moved annotation recording to finaliseComponent to account for inverted blocks; Some code style correction.

--- a/04_utils.ipynb
+++ b/04_utils.ipynb
@@ -51,7 +51,7 @@
    ],
    "source": [
     "#hide\n",
-    "from nbdev.showdoc import *\n",
+    "# from nbdev.showdoc import *\n",
     "from nbdev.export import notebook2script\n",
     "notebook2script()"
    ]
@@ -64,7 +64,7 @@
    "source": [
     "#export\n",
     "from collections.abc import Iterable\n",
-    "from copy import deepcopy\n",
+    "# from copy import deepcopy\n",
     "import json\n",
     "import numpy as np\n",
     "import os\n",
@@ -86,48 +86,26 @@
     "    else:\n",
     "        caseToDBID = {caseName:0}\n",
     "        dbid = 0\n",
-    "    \n",
+    "\n",
     "    dbid = caseToDBID.get(caseName,None)\n",
-    "    \n",
+    "\n",
     "    if dbid is None:\n",
     "        dbidArray = sorted(list(caseToDBID.values()))\n",
     "        if dbidArray[0]>0:\n",
-    "            caseToDBID[caseName] = 0\n",
     "            dbid = 0\n",
     "        else:\n",
     "            prevID = 0\n",
-    "            for curID in dbidArray:\n",
-    "                if prevID + 1 < curID:\n",
-    "                    caseToDBID[caseName] = prevID + 1\n",
-    "                    dbid = prevID + 1\n",
-    "                    break\n",
-    "    \n",
+    "            if len(dbidArray)>1:\n",
+    "                for curID in dbidArray[1:]:\n",
+    "                    if prevID + 1 < curID:\n",
+    "                        break\n",
+    "                    prevID = curID\n",
+    "            dbid = prevID + 1\n",
+    "        caseToDBID[caseName] = dbid\n",
+    "\n",
     "    joblib.dump(caseToDBID,pathToDictFile)\n",
-    "    \n",
-    "    return dbid\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([False])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = np.array([1,2])\n",
-    "# np.where((a[1:]-a[:-1])>1)[0][0]\n",
-    "(a[1:]-a[:-1])>1"
+    "\n",
+    "    return dbid"
    ]
   },
   {
@@ -137,7 +115,7 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def pathConvert(inputPath,suffix=''):\n",
+    "def pathConvert(inputPath, suffix=''):\n",
     "    outputPath = os.path.dirname(inputPath)\n",
     "    outputName = '.'.join(os.path.splitext(os.path.basename(inputPath))[:-1])+suffix\n",
     "    return outputPath,outputName"
@@ -171,8 +149,9 @@
     "    If there is no zoom level 1, adds it to the list.\n",
     "    '''\n",
     "    if not checkZoomLevels(zoomLevels):\n",
-    "        raise ValueError('Zoom level list is incorrect. Each next level should have previous one as factor.')\n",
-    "    if min(zoomLevels)>1:\n",
+    "        raise ValueError('Zoom level list is incorrect. Each next level \\\n",
+    "                          should have previous one as factor.')\n",
+    "    if min(zoomLevels) > 1:\n",
     "        zoomLevels = [1] + zoomLevels\n",
     "    return zoomLevels"
    ]
@@ -209,73 +188,77 @@
     "#export\n",
     "class bidict(dict):\n",
     "    '''\n",
-    "    Here is a class for a bidirectional dict, inspired by Finding key from value in Python \n",
-    "    dictionary and modified to allow the following 2) and 3).\n",
+    "    Here is a class for a bidirectional dict, inspired by Finding key from\n",
+    "    value in Python dictionary and modified to allow the following 2) and 3).\n",
     "\n",
     "    Note that :\n",
     "\n",
-    "    1) The inverse directory bd.inverse auto-updates itself when the standard dict bd is modified.\n",
-    "    2) The inverse directory bd.inverse[value] is always a list of key such that bd[key] == value.\n",
-    "    3) Unlike the bidict module from https://pypi.python.org/pypi/bidict, here we can have 2 keys \n",
-    "    having same value, this is very important.\n",
-    "    4) After modification, values in the \"forward\" (not inversed) dict can be lists (or any \n",
-    "    iterables theoretically, but only list was tested). \n",
-    "    \n",
-    "    For implementing 4), new method `add` was introduced. If d[key].append(value) attempted, the link \n",
-    "    between main and inversed dict will be broken. Method `add` can accept both \n",
-    "    \n",
-    "    Credit: \n",
-    "    Implemented as an answer to \n",
+    "    1) The inverse directory bd.inverse auto-updates itself when the standard\n",
+    "        dict bd is modified.\n",
+    "    2) The inverse directory bd.inverse[value] is always a list of key such\n",
+    "        that bd[key] == value.\n",
+    "    3) Unlike the bidict module from https://pypi.python.org/pypi/bidict,\n",
+    "        here we can have 2 keys having same value, this is very important.\n",
+    "    4) After modification, values in the \"forward\" (not inversed) dict\n",
+    "        can be lists (or any iterables theoretically,\n",
+    "        but only list was tested).\n",
+    "\n",
+    "    For implementing 4), new method `add` was introduced.\n",
+    "    If d[key].append(value) attempted, the link between main and inversed dict\n",
+    "    will be broken. Method `add` can accept both \n",
+    "\n",
+    "    Credit:\n",
+    "    Implemented as an answer to\n",
     "    https://stackoverflow.com/questions/3318625/how-to-implement-an-efficient-bidirectional-hash-table\n",
     "    by Basj (https://stackoverflow.com/users/1422096/basj).\n",
     "    '''\n",
+    "\n",
     "    def __init__(self, *args, **kwargs):\n",
     "        super(bidict, self).__init__(*args, **kwargs)\n",
     "        self.inverse = {}\n",
     "        for key, value in self.items():\n",
-    "            if isinstance(value,Iterable):\n",
+    "            if isinstance(value, Iterable):\n",
     "                for v in value:\n",
-    "                    self.inverse.setdefault(v,[]).append(key) \n",
+    "                    self.inverse.setdefault(v, []).append(key)\n",
     "            else:\n",
-    "                self.inverse.setdefault(value,[]).append(key) \n",
+    "                self.inverse.setdefault(value, []).append(key)\n",
     "\n",
     "    def __setitem__(self, key, value):\n",
-    "        \n",
     "        if key in self:\n",
     "            keyV = self[key]\n",
-    "            if isinstance(keyV,Iterable):\n",
+    "            if isinstance(keyV, Iterable):\n",
     "                for v in keyV:\n",
     "                    self.inverse[v].remove(key)\n",
     "            else:\n",
     "                self.inverse[keyV].remove(key)\n",
     "        super(bidict, self).__setitem__(key, value)\n",
-    "        if isinstance(value,Iterable):\n",
+    "        if isinstance(value, Iterable):\n",
     "            for v in value:\n",
-    "                self.inverse.setdefault(v,[]).append(key)        \n",
+    "                self.inverse.setdefault(v, []).append(key)\n",
     "        else:\n",
-    "            self.inverse.setdefault(value,[]).append(key)        \n",
+    "            self.inverse.setdefault(value, []).append(key)\n",
     "\n",
     "    def __delitem__(self, key):\n",
     "        value = self[key]\n",
-    "        if isinstance(value,Iterable):\n",
+    "        if isinstance(value, Iterable):\n",
     "            for v in value:\n",
-    "                self.inverse.setdefault(v,[]).remove(key)\n",
-    "                if v in self.inverse and not self.inverse[v]: \n",
+    "                self.inverse.setdefault(v, []).remove(key)\n",
+    "                if v in self.inverse and not self.inverse[v]:\n",
     "                    del self.inverse[v]\n",
     "        else:\n",
-    "            self.inverse.setdefault(value,[]).remove(key)\n",
-    "            if value in self.inverse and not self.inverse[value]: \n",
+    "            self.inverse.setdefault(value, []).remove(key)\n",
+    "            if value in self.inverse and not self.inverse[value]:\n",
     "                del self.inverse[value]\n",
     "        super(bidict, self).__delitem__(key)\n",
-    "    \n",
-    "    def add(self,key,value):\n",
-    "        valKey = set(self.setdefault(key,[]))\n",
-    "        \n",
-    "        if isinstance(value,Iterable):\n",
+    "\n",
+    "    def add(self, key, value):\n",
+    "        valKey = set(self.setdefault(key, []))\n",
+    "\n",
+    "        if isinstance(value, Iterable):\n",
     "            valKey = valKey.union(value)\n",
     "        else:\n",
     "            valKey.add(value)\n",
-    "        \n",
+    "\n",
     "        self[key] = list(valKey)"
    ]
   },
