--- a/05_export.ipynb
+++ b/05_export.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sunset-solid",
+   "id": "protective-guest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hairy-armor",
+   "id": "sharing-weather",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "earlier-uncertainty",
+   "id": "nearby-bunch",
    "metadata": {},
    "source": [
     "# Export module\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "responsible-friendship",
+   "id": "fantastic-freight",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "subsequent-check",
+   "id": "accessory-equivalent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "latest-syntax",
+   "id": "banner-convert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "visible-mediterranean",
+   "id": "educated-jackson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "based-rubber",
+   "id": "impaired-transsexual",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,8 +209,6 @@
     "        print('===========================')\n",
     "        zoom_level_struct = {}\n",
     "        zoom_level_struct[\"files\"] = []\n",
-    "        \n",
-    "        overallNBins = 0\n",
     "        \n",
     "        if returnDebugData:\n",
     "            nodeToComponent = zoomNodeToComponent.setdefault(zoomLevel,[])\n",
@@ -330,7 +328,8 @@
     "                    else:\n",
     "                        print(f'Node {nodeIdx}: Component broken before node {nodeIdx} due to start or end of a path.')\n",
     "                component,components,componentNucleotides,matrix,occupants,nBins,nCols,nucleotides = \\\n",
-    "                    finaliseComponent(component,components,componentNucleotides,matrix,occupants,nBins,nCols,componentLengths,nucleotides)\n",
+    "                    finaliseComponent(component,components,componentNucleotides,matrix,occupants,nBins,nCols,componentLengths,nucleotides,\n",
+    "                                      zoomLevel=zoomLevel,accessions=graph.accessions,redisConn=redisConn)\n",
     "                componentToNode.append(list(nodesInComp))\n",
     "                nodesInComp = set([nodeIdx])\n",
     "                breakComponent = False\n",
@@ -410,12 +409,12 @@
     "                            nodeStart = pathNodeLengthsCum[pathID,nodeNumInPath]-nodeLen+1\n",
     "                            posPath.append([nodeStart+i,nodeStart+offset-1])\n",
     "                    \n",
-    "                    matrix,pos,binLength,_,_,nBins,annotationNames,nCols,overallNBins,binOpen = \\\n",
+    "                    matrix,pos,binLength,_,_,nBins,annotationNames,nCols,binOpen = \\\n",
     "                        finaliseBin(matrix,pos,binLength,\n",
     "                                    nodeLengths[nodeIdx-1],\n",
     "                                    occupancy,inversion,\n",
     "                                    nBins,nCols,posInd,\n",
-    "                                    redisConn,zoomLevel,overallNBins,annotationNames,\n",
+    "                                    annotationNames,\n",
     "                                    graph.accessions)\n",
     "\n",
     "                    if nBins+1>maxLengthComponent and (i+zoomLevel<nodeLen) and len(matrix)>0:\n",
@@ -452,7 +451,9 @@
     "                        if debug:\n",
     "                            print(f'Node {nodeIdx}: Component broken inside node {nodeIdx} due to max component length.')\n",
     "\n",
-    "                        component,components,componentNucleotides,matrix,occupants,nBins,nCols,nucleotides = finaliseComponent(component,components,componentNucleotides,matrix,occupants,nBins,nCols,componentLengths,nucleotides)                    \n",
+    "                        component,components,componentNucleotides,matrix,occupants,nBins,nCols,nucleotides = \\\n",
+    "                            finaliseComponent(component,components,componentNucleotides,matrix,occupants,nBins,nCols,componentLengths,nucleotides,\n",
+    "                                              zoomLevel=zoomLevel,accessions=graph.accessions,redisConn=redisConn)\n",
     "\n",
     "                        nodeToComponent[-1].append(len(components))\n",
     "                        componentToNode.append(list(nodesInComp))\n",
@@ -523,20 +524,20 @@
     "            \n",
     "                if nodeIdx<len(graph.nodes):\n",
     "                    if binLength+nodeLengths[nodeIdx]>zoomLevel:\n",
-    "                        matrix,pos,binLength,occupancy,inversion,nBins,annotationNames,nCols,overallNBins,binOpen = \\\n",
+    "                        matrix,pos,binLength,occupancy,inversion,nBins,annotationNames,nCols,binOpen = \\\n",
     "                        finaliseBin(matrix,pos,binLength,\n",
     "                                    binLength,\n",
     "                                    occupancy,inversion,\n",
     "                                    nBins,nCols,0,\n",
-    "                                    redisConn,zoomLevel,overallNBins,annotationNames,\n",
+    "                                    annotationNames,\n",
     "                                    graph.accessions)\n",
     "                else:\n",
-    "                    matrix,pos,binLength,occupancy,inversion,nBins,annotationNames,nCols,overallNBins,binOpen = \\\n",
+    "                    matrix,pos,binLength,occupancy,inversion,nBins,annotationNames,nCols,binOpen = \\\n",
     "                    finaliseBin(matrix,pos,binLength,\n",
     "                                binLength,\n",
     "                                occupancy,inversion,\n",
     "                                nBins,nCols,0,\n",
-    "                                redisConn,zoomLevel,overallNBins,annotationNames,\n",
+    "                                annotationNames,\n",
     "                                graph.accessions)\n",
     "\n",
     "            # marking path ends and breaking component if any exist\n",
@@ -563,7 +564,9 @@
     "                elif nBins>0:\n",
     "                    if debug:\n",
     "                        print(f'Node {nodeIdx}: Component broken after node {nodeIdx} due to start or end of a path.')\n",
-    "                    component,components,componentNucleotides,matrix,occupants,nBins,nCols,nucleotides = finaliseComponent(component,components,componentNucleotides,matrix,occupants,nBins,nCols,componentLengths,nucleotides)\n",
+    "                    component,components,componentNucleotides,matrix,occupants,nBins,nCols,nucleotides = \\\n",
+    "                        finaliseComponent(component,components,componentNucleotides,matrix,occupants,nBins,nCols,componentLengths,nucleotides,\n",
+    "                                          zoomLevel=zoomLevel,accessions=graph.accessions,redisConn=redisConn)\n",
     "                    componentToNode.append(list(nodesInComp))\n",
     "\n",
     "                    nodesInComp = set()\n",
@@ -575,7 +578,9 @@
     "\n",
     "                    if debug:\n",
     "                        print(f'Node {nodeIdx}: Component broken after node {nodeIdx} because next component will not fit in this component.')\n",
-    "                    component,components,componentNucleotides,matrix,occupants,nBins,nCols,nucleotides = finaliseComponent(component,components,componentNucleotides,matrix,occupants,nBins,nCols,componentLengths,nucleotides)\n",
+    "                    component,components,componentNucleotides,matrix,occupants,nBins,nCols,nucleotides = \\\n",
+    "                        finaliseComponent(component,components,componentNucleotides,matrix,occupants,nBins,nCols,componentLengths,nucleotides,\n",
+    "                                          zoomLevel=zoomLevel,accessions=graph.accessions,redisConn=redisConn)\n",
     "                    componentToNode.append(list(nodesInComp))\n",
     "\n",
     "                    nodesInComp = set()\n",
@@ -585,7 +590,9 @@
     "\n",
     "                if debug:\n",
     "                    print(f'Node {nodeIdx}: Last node in the last component.')\n",
-    "                component,components,componentNucleotides,matrix,occupants,nBins,nCols,nucleotides = finaliseComponent(component,components,componentNucleotides,matrix,occupants,nBins,nCols,componentLengths,nucleotides)\n",
+    "                component,components,componentNucleotides,matrix,occupants,nBins,nCols,nucleotides = \\\n",
+    "                    finaliseComponent(component,components,componentNucleotides,matrix,occupants,nBins,nCols,componentLengths,nucleotides,\n",
+    "                                      zoomLevel=zoomLevel,accessions=graph.accessions,redisConn=redisConn)\n",
     "                componentToNode.append(list(nodesInComp))\n",
     "\n",
     "                nodesInComp = set()\n",
@@ -698,7 +705,9 @@
     "                        print(f'Node {nodeIdx}: Component broken after node {nodeIdx} because of previously set flag.')\n",
     "                        print(f'Nodes in component: {nodesInComp}')\n",
     "                        print(f'Nodes linked from component: {nodeLinks}')\n",
-    "                    component,components,componentNucleotides,matrix,occupants,nBins,nCols,nucleotides = finaliseComponent(component,components,componentNucleotides,matrix,occupants,nBins,nCols,componentLengths,nucleotides)\n",
+    "                    component,components,componentNucleotides,matrix,occupants,nBins,nCols,nucleotides = \\\n",
+    "                        finaliseComponent(component,components,componentNucleotides,matrix,occupants,nBins,nCols,componentLengths,nucleotides,\n",
+    "                                          zoomLevel=zoomLevel,accessions=graph.accessions,redisConn=redisConn)\n",
     "                    componentToNode.append(list(nodesInComp))\n",
     "                    nodesInComp = set()\n",
     "                    breakComponent = False\n",
@@ -829,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "entertaining-centre",
+   "id": "israeli-fifteen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "crude-addiction",
+   "id": "portable-chess",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "thick-cycling",
+   "id": "expired-champagne",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,12 +952,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hybrid-small",
+   "id": "buried-james",
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
-    "def finaliseBin(matrix,pos,binLength,occInvAdj,occupancy,inversion,nBins,nCols,posInd,redisConn,zoomLevel,overallNBins,annotationNames,accessions):\n",
+    "def finaliseBin(matrix,pos,binLength,occInvAdj,occupancy,inversion,nBins,nCols,posInd,annotationNames,accessions):\n",
     "    for pathID in pos.keys():\n",
     "        matrixPath = matrix.setdefault(pathID,[[],[]])\n",
     "        posPath = pos.get(pathID)\n",
@@ -970,33 +979,36 @@
     "            \n",
     "        newPos[-1].append(np.max(candidates))# !!!!        \n",
     "        \n",
-    "        posMapping = {int(overallNBins+1):(int(posStart),int(posEnd)) for posStart,posEnd in newPos}\n",
-    "        iset_add(redisConn, f'{zoomLevel}.{accessions[pathID]}.Pos',posMapping)\n",
+    "#         posMapping = {int(overallNBins+1):(int(posStart),int(posEnd)) for posStart,posEnd in newPos}\n",
+    "#         iset_add(redisConn, f'{zoomLevel}.{accessions[pathID]}.Pos',posMapping)\n",
     "        \n",
-    "        geneList = annotationNames[accessions[pathID]]\n",
-    "        if len(geneList)>0:\n",
-    "            geneMapping = {gene:int(overallNBins+1) for gene in geneList}\n",
-    "            redisConn.hmset( f'{zoomLevel}.{accessions[pathID]}.Gene',geneMapping)\n",
+    "#         geneList = annotationNames[accessions[pathID]]\n",
+    "#         if len(geneList)>0:\n",
+    "#             geneMapping = {gene:int(overallNBins+1) for gene in geneList}\n",
+    "#             redisConn.hmset( f'{zoomLevel}.{accessions[pathID]}.Gene',geneMapping)\n",
     "        \n",
     "        inversionRate = inversion[pathID]/occInvAdj\n",
     "#         pdb.set_trace()\n",
-    "        matrixPathRecord = [0,0,[],list(annotationNames[accessions[pathID]].keys())]\n",
+    "        matrixPathRecord = [occupancy[pathID]/occInvAdj, # occupancy\n",
+    "                            inversionRate, # inversion\n",
+    "                            newPos, # genomic positions\n",
+    "                            list(annotationNames[accessions[pathID]].keys())] # annotation\n",
     "        matrixPath[0].append(nBins)\n",
-    "        matrixPathRecord[0] = occupancy[pathID]/occInvAdj # Occupancy\n",
-    "        matrixPathRecord[1] = inversionRate # Inversion rate\n",
-    "        matrixPathRecord[2] = newPos\n",
+    "#         matrixPathRecord[0] = occupancy[pathID]/occInvAdj # Occupancy\n",
+    "#         matrixPathRecord[1] = inversionRate # Inversion rate\n",
+    "#         matrixPathRecord[2] = newPos\n",
     "        if inversionRate>0.5:\n",
     "            matrixPath[1].insert(posInd,matrixPathRecord)\n",
     "        else:\n",
     "            matrixPath[1].append(matrixPathRecord)\n",
     "        \n",
-    "    return matrix,{},0,{},{},nBins+1,{},nCols+binLength,overallNBins+1,False #matrix,pos,binLength,occupancy,inversion,nBins,annotationNames,nCols,overallNBins,binOpen"
+    "    return matrix,{},0,{},{},nBins+1,{},nCols+binLength,False #matrix,pos,binLength,occupancy,inversion,nBins,annotationNames,nCols,overallNBins,binOpen"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "constant-trauma",
+   "id": "boring-burke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,21 +1024,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acquired-glenn",
+   "id": "public-tomorrow",
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
-    "def finaliseComponent(component,components,componentNucleotides,matrix,occupants,nBins,nCols,componentLengths,nucleotides,invertionThreshold=0.5):\n",
+    "def finaliseComponent(component,components,componentNucleotides,matrix,occupants,nBins,nCols,componentLengths,nucleotides,zoomLevel,accessions,invertionThreshold=0.5,redisConn=None):\n",
     "    componentLengths.append(nBins)\n",
     "    component[\"matrix\"].extend([[pathID,\n",
     "                                 int(matrixPathArray[1][0][1]>invertionThreshold),\n",
     "                                 adjustMatrixPathArray(matrixPathArray,int(matrixPathArray[1][0][1]>invertionThreshold),nBins)] \\\n",
     "                                for pathID,matrixPathArray in matrix.items()])\n",
+    "    \n",
+    "    \n",
     "    component[\"occupants\"] = sorted(list(occupants))\n",
     "    component['last_bin'] = component['first_bin'] + nBins - 1\n",
     "    component['lastCol'] = component['firstCol'] + nCols - 1\n",
     "    componentNucleotides.append(nucleotides)\n",
+    "    if redisConn is not None:\n",
+    "        for pathID,matrixPathArray in matrix.items():\n",
+    "            for binNum,binMatrix in zip(*matrixPathArray):\n",
+    "                if binMatrix[1]>invertionThreshold:\n",
+    "                    overallBin = component['last_bin']-binNum\n",
+    "                else:\n",
+    "                    overallBin = component['first_bin']+binNum\n",
+    "                \n",
+    "                posMapping = {int(overallBin):(int(posStart),int(posEnd)) for posStart,posEnd in binMatrix[2]}\n",
+    "                iset_add(redisConn, f'{zoomLevel}.{accessions[pathID]}.Pos',posMapping)\n",
+    "\n",
+    "                geneList = binMatrix[3]\n",
+    "                for gene in geneList:\n",
+    "                    if not redisConn.hexists(f'{zoomLevel}.{accessions[pathID]}.Gene',gene):\n",
+    "                        redisConn.hset( f'{zoomLevel}.{accessions[pathID]}.Gene',gene,overallBin)\n",
+    "    \n",
     "    firstBin = component['last_bin'] + 1\n",
     "    firstCol = component['lastCol'] + 1\n",
     "    components.append(component)\n",
@@ -1039,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "limited-animal",
+   "id": "august-tucson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1130,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "color-playback",
+   "id": "former-newcastle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smoking-antarctica",
+   "id": "particular-earthquake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eight-hopkins",
+   "id": "shared-buddy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,7 +1295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "significant-maker",
+   "id": "rental-timber",
    "metadata": {},
    "outputs": [],
    "source": [
