--- a/01_graph.ipynb
+++ b/01_graph.ipynb
@@ -315,7 +315,7 @@
     "            print(f'Found node annotation file {annotationFile}, loading associations.')\n",
     "            self.nodesAnnotation = joblib.load(annotationFile)\n",
     "            emptyAnnotation = False\n",
-    "        elif annotationFiles is not None and isSeq:\n",
+    "        else:\n",
     "            emptyAnnotation = True\n",
     "        \n",
     "        prevPathSegment = None\n",
@@ -359,6 +359,7 @@
     "            \n",
     "            self.nodes.append(segName)\n",
     "            self.nodesData.append(segSeq)\n",
+    "        \n",
     "        if emptyAnnotation:\n",
     "            self.nodesAnnotation = [{}]*len(self.nodes)\n",
     "            \n",
